fix button text whitespace behavior

--- a/less/buttons.less
+++ b/less/buttons.less
@@ -41,7 +41,7 @@
 	text-align: center;
 	text-decoration: none !important;
 	text-transform: uppercase;
-	white-space: pre;
+	white-space: nowrap;
 	letter-spacing: 2px;
 	line-height: 1rem;
 	vertical-align: middle;
